--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,6 +46,9 @@
                 Prior to joining Georgia Institute of Technology, I spent a year at <a href="https://asteria.co.in/about-us/">Asteria Aerospace Limited</a> as a software Engineer.
               </p>
               <p>
+                Currently looking for full-time positions starting Spring 2025.
+              </p>
+              <p>
                 Email: abeedu3 [at] gatech [dot] edu
               </p>
               <p style="text-align:center">
@@ -67,7 +70,10 @@
               <h2>News</h2>
               <ul>
                 <!-- <li>Sleep</li> -->
-                <li>Jan 2024: Our paper <a href="https://arxiv.org/pdf/2401.12972.pdf">On the Efficacy of Text-Based Input Modalities for Action Anticipation</a> is on ArXiv.</li>
+                 <li>Sept 2024: Our paper <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a> is on ArXiv. Code will be available soon!</li>
+                 <li>Aug 2024: Our paper <a href="https://arxiv.org/pdf/2408.12023">Limitations in Employing Natural Language Supervision for Sensor-Based Human Activity Recognition--And Ways to Overcome Them</a> is on ArXiv.</li>
+                 <li>Jun 2024: I will be in Seatle for CVPR 2024. Let's meet if you are around!</li>
+                <li>Jan 2024: Our paper <a href="https://arxiv.org/pdf/2401.12972.pdf">On the Efficacy of Text-Based Input Modalities for Action Anticipation</a> is on ArXiv. Code will be available soon!</li>
                 <li>Oct 2023: Presented our paper on <a href="https://arxiv.org/pdf/2309.01262">Multimodal Contrastive Learning with Hard Negative Sampling for Human Activity Recognition</a> at <a href="https://sites.google.com/view/perdream/home">PerDream@ICCV </a>!</li>
                 <li>Dec 2022: Presented our papers <a href="https://arxiv.org/pdf/2210.13540">Video based Object 6D Pose Estimation using Transformers</a> and <a href="https://arxiv.org/pdf/2210.14512">End-to-End Multimodal Representation Learning for Video Dialog </a> at <a href="https://sites.google.com/view/vtta-neurips2022/accepted-papers"> VTTA2022@NeuRIPS</a>.</li>
                 <li>Oct 2022: Served as a reviewer for BMVC 2022 and NeuRIPS VTTA workshop.</li>
@@ -124,7 +130,10 @@
               <a href="{{post.youtube}}">youtube</a> /
               {% endif %}
               {% if post.arxiv %}
-              <a href="{{post.arxiv}}">arxiv</a>
+              <a href="{{post.arxiv}}">pdf</a> /
+              {% endif %}
+              {% if post.bibtex %}
+              <a href="{{post.bibtex}}">bibtex</a>
               {% endif %}
               <p></p>
               {{ post.excerpt }}
@@ -152,7 +161,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Service</h2>
               <p>
-                I have reviewed for BMVC(2021, 2022, 2023), CAI2024, PerDream2023, VTTA2022.
+                I have reviewed for BMVC(2021-2024), PerDream2023, VTTA2022.
               </p>
             </td>
           </tr>
@@ -163,8 +172,7 @@
               <h2>Mentoring</h2>
               <ul>
                 <li><a href="https://www.linkedin.com/in/kara-bethany-liu-20840895/">Kara Bethany Liu</a></li>
-                <li><a href="https://www.linkedin.com/in/jason-sheinkopf-876a14b/">Jason Sheinkopf</a></li>
-                <li><a href="https://scholar.google.com/citations?user=Ot5mZs0AAAAJ">Zhikang Dong</a></li>
+                <li><a href="https://scholar.google.com/citations?user=Ot5mZs0AAAAJ">Zhikang Dong</a>, <a href="https://www.linkedin.com/in/jason-sheinkopf-876a14b/">Jason Sheinkopf</a>- Work led to the submission  <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a></li>
                 <li> <a href="https://www.linkedin.com/in/johnc96/">Hyeongju John Choi</a> - Work led to a submission  <a href="https://arxiv.org/pdf/2309.01262">Multimodal Contrastive Learning with Hard Negative Sampling for Human Activity Recognition</a> (PerDream@ICCV2023)</li>
                 <li><a href="https://www.linkedin.com/in/johnc96/">Hrishikesh Kale</a></a></li>
               </ul>
