--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,6 +38,14 @@
               </p>
               <p>
                 My research interests are primarily focused on understanding actions and object's states in videos, and have previously worked on 6D object pose estimation and human activity recognition.
+                Broadly, my research is in the union of 
+                <p>
+                  <b>
+                    <center>
+                      Video Understanding + Multi-Modal Learning + Foundation Models
+                    </center>
+                  </b>
+                </p>
               </p>
               <p>
                 During the summer of 2021, I was an intern at Facebook Reality Labs, collaborating with <a href="https://scholar.google.ch/citations?user=bm5dZwIAAAAJ&hl=en">Chengde Wan</a> and <a href="linkedin.com/in/rywang">Robert Wang</a>. 
