--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,8 +78,8 @@
               <h2>News</h2>
               <ul>
                 <!-- <li>Sleep</li> -->
+                 <li>Dec 2024: Our paper <a href="https://arxiv.org/pdf/2408.12023">Limitations in Employing Natural Language Supervision for Sensor-Based Human Activity Recognition--And Ways to Overcome Them</a> has been accepted to AAAI 2025.</li>
                  <li>Sept 2024: Our paper <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a> is on ArXiv. Code will be available soon!</li>
-                 <li>Aug 2024: Our paper <a href="https://arxiv.org/pdf/2408.12023">Limitations in Employing Natural Language Supervision for Sensor-Based Human Activity Recognition--And Ways to Overcome Them</a> is on ArXiv.</li>
                  <li>Jun 2024: I will be in Seatle for CVPR 2024. Let's meet if you are around!</li>
                 <li>Jan 2024: Our paper <a href="https://arxiv.org/pdf/2401.12972.pdf">On the Efficacy of Text-Based Input Modalities for Action Anticipation</a> is on ArXiv. Code will be available soon!</li>
                 <li>Oct 2023: Presented our paper on <a href="https://arxiv.org/pdf/2309.01262">Multimodal Contrastive Learning with Hard Negative Sampling for Human Activity Recognition</a> at <a href="https://sites.google.com/view/perdream/home">PerDream@ICCV </a>!</li>
