Dec 2024 update with ICASSP and AAAI acceptance
Signed-off-by: apoorva <apoorvabeedu@gmail.com>

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,7 @@
               <h2>News</h2>
               <ul>
                 <!-- <li>Sleep</li> -->
+                 <li>Dec 2024: Our paper on <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion</a> and <a href="https://arxiv.org/pdf/2401.12972.pdf">Action Anticipation</a> have been accepted to ICASSP 2025!</li>
                  <li>Dec 2024: Our paper <a href="https://arxiv.org/pdf/2408.12023">Limitations in Employing Natural Language Supervision for Sensor-Based Human Activity Recognition--And Ways to Overcome Them</a> has been accepted to AAAI 2025.</li>
                  <li>Sept 2024: Our paper <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a> is on ArXiv. Code will be available soon!</li>
                  <li>Jun 2024: I will be in Seatle for CVPR 2024. Let's meet if you are around!</li>
@@ -117,7 +118,7 @@
               {{post.authors}}
 
               <br>
-              <em>{{post.venue}}</em>, {{ post.date | date: "%Y" }}
+              <em>{{post.venue}}</em><!-- , {{ post.date | date: "%Y" }} -->
               <br>
               {% if post.video %}
               <a href="{{post.video}}">video</a> /
@@ -180,7 +181,7 @@
               <h2>Mentoring</h2>
               <ul>
                 <li><a href="https://www.linkedin.com/in/kara-bethany-liu-20840895/">Kara Bethany Liu</a></li>
-                <li><a href="https://scholar.google.com/citations?user=Ot5mZs0AAAAJ">Zhikang Dong</a>, <a href="https://www.linkedin.com/in/jason-sheinkopf-876a14b/">Jason Sheinkopf</a>- Work led to the submission  <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a></li>
+                <li><a href="https://scholar.google.com/citations?user=Ot5mZs0AAAAJ">Zhikang Dong</a>, <a href="https://www.linkedin.com/in/jason-sheinkopf-876a14b/">Jason Sheinkopf</a>- Work led to the submission  <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a>(ICASSP 2025)</li>
                 <li> <a href="https://www.linkedin.com/in/johnc96/">Hyeongju John Choi</a> - Work led to a submission  <a href="https://arxiv.org/pdf/2309.01262">Multimodal Contrastive Learning with Hard Negative Sampling for Human Activity Recognition</a> (PerDream@ICCV2023)</li>
                 <li><a href="https://www.linkedin.com/in/johnc96/">Hrishikesh Kale</a></a></li>
               </ul>
