--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -120,11 +120,14 @@
               <br>
               <em>{{post.venue}}</em><!-- , {{ post.date | date: "%Y" }} -->
               <br>
-              {% if post.video %}
-              <a href="{{post.video}}">video</a> /
+              {% if post.arxiv %}
+              <a href="{{post.arxiv}}">pdf</a> /
               {% endif %}
               {% if post.code %}
               <a href="{{post.code}}">code</a> /
+              {% endif %}
+              {% if post.video %}
+              <a href="{{post.video}}">video</a> /
               {% endif %}
               {% if post.poster %}
               <a href="{{post.poster}}">poster</a> /
@@ -132,17 +135,17 @@
               {% if post.slides %}
               <a href="{{post.slides}}">slides</a> /
               {% endif %}
-              {% if post.website %}
-              <a href="{{post.website}}">website</a> /
-              {% endif %}
               {% if post.youtube %}
               <a href="{{post.youtube}}">youtube</a> /
               {% endif %}
-              {% if post.arxiv %}
-              <a href="{{post.arxiv}}">pdf</a> /
-              {% endif %}
               {% if post.bibtex %}
-              <a href="{{post.bibtex}}">bibtex</a>
+              <a href="{{post.bibtex}}">bibtex</a> /
+              {% endif %}
+              {% if post.website %}
+              <a href="{{post.website}}">project page</a> /
+              {% endif %}
+              {% if post.supplementary %}
+              <a href="{{post.supplementary}}">supp</a> /
               {% endif %}
               <p></p>
               {{ post.excerpt }}
