--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,6 +78,7 @@
               <h2>News</h2>
               <ul>
                 <!-- <li>Sleep</li> -->
+                 <li>April 2025: Presenting our papers on <a href="https://apoorvabeedu.github.io/mamba-vl/">Mamba Fusion</a> and <a href="https://apoorvabeedu.github.io/mamba-mcat/">Action Anticipation</a> at ICASSP on April 8th. Visit our posters in room 2H if you are at the venue! </li>
                  <li>Dec 2024: Our paper on <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion</a> and <a href="https://arxiv.org/pdf/2401.12972.pdf">Action Anticipation</a> have been accepted to ICASSP 2025!</li>
                  <li>Dec 2024: Our paper <a href="https://arxiv.org/pdf/2408.12023">Limitations in Employing Natural Language Supervision for Sensor-Based Human Activity Recognition--And Ways to Overcome Them</a> has been accepted to AAAI 2025.</li>
                  <li>Sept 2024: Our paper <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion: Learning Actions Through Questioning</a> is on ArXiv. Code will be available soon!</li>
