--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,10 +34,10 @@
               <h1>
                 Apoorva Beedu
               </h1>
-              <p>I am a PhD candidate at Georgia Institute of Technology advised by <a href="http://www.irfanessa.gatech.edu/">Dr. Irfan Essa</a> and <a href="https://jrom.ece.gatech.edu/">Dr. Justin Romberg</a>.
+              <p>I am a Sr. AI Research Engineer at Rivian VW Tech. I got my PhD at Georgia Institute of Technology where I worked on Video and Language Understanding and was advised by <a href="http://www.irfanessa.gatech.edu/">Dr. Irfan Essa</a> and <a href="https://jrom.ece.gatech.edu/">Dr. Justin Romberg</a>.
               </p>
               <p>
-                My research interests are primarily focused on understanding actions and object's states in videos, and have previously worked on 6D object pose estimation and human activity recognition.
+                My research interests are primarily focused on understanding video through the usage of Language cues for various tasks like summarization, action anticipation etc., and have previously worked on 6D object pose estimation and human activity recognition.
                 Broadly, my research is in the union of 
                 <p>
                   <b>
@@ -54,10 +54,7 @@
                 Prior to joining Georgia Institute of Technology, I spent a year at <a href="https://asteria.co.in/about-us/">Asteria Aerospace Limited</a> as a software Engineer.
               </p>
               <p>
-                Currently looking for full-time positions starting Spring 2025.
-              </p>
-              <p>
-                Email: abeedu3 [at] gatech [dot] edu
+                Email: apoorvabeedu [at] gmail [dot] com
               </p>
               <p style="text-align:center">
                 <!-- <a href="mailto:abeedu3@gatech.edu">Email</a> &nbsp;/&nbsp; -->
@@ -78,6 +75,8 @@
               <h2>News</h2>
               <ul>
                 <!-- <li>Sleep</li> -->
+                 <li>July 2025: I am successfully defended my PhD Thesis titled - "Learning Vision and Language Cues for Video Understanding in Egocentric and Instructional Videos" </li>
+                 <li>June 2025: I am starting as a Sr. AI Research Engineer at Rivian VW Tech! </li>
                  <li>April 2025: Presenting our papers on <a href="https://apoorvabeedu.github.io/mamba-vl/">Mamba Fusion</a> and <a href="https://apoorvabeedu.github.io/mamba-mcat/">Action Anticipation</a> at ICASSP on April 8th. Visit our posters in room 2H if you are at the venue! </li>
                  <li>Dec 2024: Our paper on <a href="https://arxiv.org/pdf/2409.11513">Mamba Fusion</a> and <a href="https://arxiv.org/pdf/2401.12972.pdf">Action Anticipation</a> have been accepted to ICASSP 2025!</li>
                  <li>Dec 2024: Our paper <a href="https://arxiv.org/pdf/2408.12023">Limitations in Employing Natural Language Supervision for Sensor-Based Human Activity Recognition--And Ways to Overcome Them</a> has been accepted to AAAI 2025.</li>
@@ -162,7 +161,7 @@
             <td style="padding:2.5%;width:100%;vertical-align:middle">
               <h2>Teaching</h2>
               <ul>
-                <li>Aug 2018 - Present: Head TA for <a href="https://omscs.gatech.edu/cs-6476-computer-vision}}">OMSCS 6476 Introduction to Computer Vision</a></li>
+                <li>Aug 2018 - May 2025: Head TA for <a href="https://omscs.gatech.edu/cs-6476-computer-vision}}">OMSCS 6476 Introduction to Computer Vision</a></li>
                 <li>Aug 2017 - Aug 2018: GTA for <a href="https://omscs.gatech.edu/cs-6476-computer-vision}}">OMSCS 6476 Introduction to Computer Vision</a></li>
               </ul>
             </td>
